--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -91,4 +91,17 @@
     <string name="octagon">Octágono</string>
     <string name="nonagon">Nonágono</string>
     <string name="decagon">Decágono</string>
+    <string name="cube">Cubo</string>
+    <string name="rectangular_prism">Prisma Rectangular</string>
+    <string name="sphere">Esfera</string>
+    <string name="hemisphere">Hemisphere</string>
+    <string name="triangular_prism">Triangular Prism</string>
+    <string name="pyramid_triangular_base">Pyramid (Triangular Base)</string>
+    <string name="pyramid_rectangular_base">Pyramid (Rectangular Base)</string>
+    <string name="pentagonal_prism">Pentagonal Prism</string>
+    <string name="cone">Cone</string>
+    <string name="cylinder">Cylinder</string>
+    <string name="regular_octahedron">Regular Octahedron</string>
+    <string name="dodecahedron">Dodecahedron</string>
+    <string name="torus">Torus</string>
 </resources>
