--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -140,4 +140,41 @@
     <string name="edit">Edit</string>
     <string name="shortcuts">Shortcuts</string>
     <string name="delete">Delete</string>
+    <string name="distance_inches">Inches</string>
+    <string name="distance_feet">Feet</string>
+    <string name="distance_yards">Yards</string>
+    <string name="distance_miles">Miles</string>
+    <string name="distance_millimeters">Millimeters</string>
+    <string name="distance_centimeters">Centimeters</string>
+    <string name="distance_meters">Meters</string>
+    <string name="distance_kilometers">Kilometers</string>
+    <string name="open_terminal">Open Terminal</string>
+    <string name="mass_micrograms">Micrograms</string>
+    <string name="mass_milligrams">Milligrams</string>
+    <string name="mass_centigrams">Centigrams</string>
+    <string name="mass_grams">Grams</string>
+    <string name="mass_kilograms">Kilograms</string>
+    <string name="mass_ounces">Ounces</string>
+    <string name="mass_pounds">Pounds</string>
+    <string name="mass_newtons">Newtons</string>
+    <string name="mass_stones">Stones</string>
+    <string name="temp_fahrenheit">Fahrenheit</string>
+    <string name="temp_celsius">Celsius</string>
+    <string name="temp_kelvin">Kelvin</string>
+    <string name="time_nanoseconds">Nanoseconds</string>
+    <string name="time_microseconds">Microseconds</string>
+    <string name="time_milliseconds">Milliseconds</string>
+    <string name="time_seconds">Seconds</string>
+    <string name="time_minutes">Minutes</string>
+    <string name="time_hours">Hours</string>
+    <string name="time_days">Days</string>
+    <string name="time_weeks">Weeks</string>
+    <string name="volume_milliliters">Milliliters</string>
+    <string name="volume_liters">Liters</string>
+    <string name="volume_cubic_meters">Cubic Meters</string>
+    <string name="volume_ounces">Ounces</string>
+    <string name="volume_cups">Cups</string>
+    <string name="volume_pints">Pints</string>
+    <string name="volume_quarts">Quarts</string>
+    <string name="volume_gallons">Gallons</string>
 </resources>
