--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -488,4 +488,11 @@
     <string name="max_decimals_description">Note: Some complex operations may take noticeably longer to complete if this value is greater than 10.</string>
     <string name="live_expression_description">Calculate and display expression results before pressing the equals button.</string>
     <string name="ignore_pemdas_description">Ignore PEMDAS and prioritize evaluating coefficients in front of parentheses.\n(WARNING: Only enable this if you know what you\'re doing! Enabling this can yield incorrect calculation results)</string>
+    <string name="dynamic_precision">Dynamic Precision</string>
+    <string name="max_decimal_places">Maximum Decimal Places</string>
+    <string name="focus_mode">Focus Mode</string>
+    <string name="show_constants_functions">Show Custom Constants/Functions</string>
+    <string name="live_expression_eval">Live Expression Evaluation</string>
+    <string name="exchange_rate_frequency_title">When to Fetch Exchange Rates</string>
+    <string name="prioritize_coefficients_title">Prioritize Coefficients</string>
 </resources>
