--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -190,4 +190,5 @@
     <string name="speed">SPEED</string>
     <string name="temperature_abbreviated">TEMP.</string>
     <string name="base_representation">BASE</string>
+    <string name="date_toolbar_title">Cálculo de Fecha</string>
 </resources>
