--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -198,12 +198,13 @@
     <string name="live_expression_eval">Live Expression Evaluation</string>
     <string name="exchange_rate_frequency_title">When to Fetch Exchange Rates</string>
     <string name="prioritize_coefficients_title">Prioritize Coefficients</string>
-    <string name="distance">DISTANCE</string>
-    <string name="mass">MASS</string>
-    <string name="time">TIME</string>
-    <string name="currency">CURRENCY</string>
-    <string name="speed">SPEED</string>
-    <string name="temperature_abbreviated">TEMP.</string>
-    <string name="base_representation">BASE</string>
+    <string name="distance">Distance</string>
+    <string name="mass">Mass</string>
+    <string name="time">Time</string>
+    <string name="currency">Currency</string>
+    <string name="speed">Speed</string>
+    <string name="temperature_abbreviated">Temp.</string>
     <string name="date_toolbar_title">Date</string>
+    <string name="base_representation">Base</string>
+    <string name="volume_lower">Volume</string>
 </resources>
