--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
         \n8. The equals/clear animation is now a bit smoother.
         \n9. The changelog will now display one more previous version.
         \n10. Updated Spanish translations. Most of the app is now available in Spanish!
-        \n11. Many bug fixes and performance improvements.
+        \n11. Optimized more layouts for smaller devices.
+        \n12. Many bug fixes and performance improvements.
 
     </string>
 
@@ -495,12 +496,13 @@
     <string name="live_expression_eval">Live Expression Evaluation</string>
     <string name="exchange_rate_frequency_title">When to Fetch Exchange Rates</string>
     <string name="prioritize_coefficients_title">Prioritize Coefficients</string>
-    <string name="distance">DISTANCE</string>
-    <string name="mass">MASS</string>
-    <string name="time">TIME</string>
-    <string name="currency">CURRENCY</string>
-    <string name="speed">SPEED</string>
-    <string name="temperature_abbreviated">TEMP.</string>
-    <string name="base_representation">BASE</string>
+    <string name="distance">Distance</string>
+    <string name="mass">Mass</string>
+    <string name="time">Time</string>
+    <string name="currency">Currency</string>
+    <string name="speed">Speed</string>
+    <string name="temperature_abbreviated">Temp.</string>
+    <string name="base_representation">Base</string>
     <string name="date_toolbar_title">Date</string>
+    <string name="volume_lower">Volume</string>
 </resources>
