--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -370,7 +370,10 @@
     <string name="black">Black</string>
     <string name="midnight">Midnight</string>
     <string name="monochrome">Monochrome</string>
-    <string name="custom" translatable="false">Custom</string>
+
+    <!-- "custom" cannot be longer than 7 characters due to layout size constraints. -->
+    <string name="custom">Custom</string>
+
     <string name="new_theme">New Theme</string>
     <string name="keypad">KEYPAD</string>
     <string name="primary">PRIMARY</string>
