--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -530,4 +530,6 @@
     <string name="overwrite_theme_confirmation">A theme with that name already exists. Do you want to overwrite it?</string>
     <string name="successfully_renamed">Successfully renamed</string>
     <string name="import_file_not_found_error">Error: Either the specified file could not be found, or access was denied.</string>
+    <string name="currency_fetch_error">Error retrieving currency data</string>
+    <string name="error_no_internet">Error: No Internet Connection</string>
 </resources>
