--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -95,45 +95,45 @@
     <string name="rectangular_prism">Prisma Rectangular</string>
     <string name="sphere">Esfera</string>
     <string name="hemisphere">Hemisferio</string>
-    <string name="triangular_prism">Triangular Prism</string>
-    <string name="pyramid_triangular_base">Pyramid (Triangular Base)</string>
-    <string name="pyramid_rectangular_base">Pyramid (Rectangular Base)</string>
-    <string name="pentagonal_prism">Pentagonal Prism</string>
-    <string name="cone">Cone</string>
-    <string name="cylinder">Cylinder</string>
-    <string name="regular_octahedron">Regular Octahedron</string>
-    <string name="dodecahedron">Dodecahedron</string>
-    <string name="torus">Torus</string>
-    <string name="side_length">Side Length</string>
-    <string name="length">Length</string>
-    <string name="width">Width</string>
-    <string name="radius">Radius</string>
-    <string name="major_radius">Major Radius</string>
-    <string name="minor_radius">Minor Radius</string>
-    <string name="base_length">Base Length</string>
-    <string name="height">Height</string>
-    <string name="lower_base">Lower Base</string>
-    <string name="upper_base">Upper Base</string>
-    <string name="apothem">Apothem</string>
+    <string name="triangular_prism">Prisma Triangular</string>
+    <string name="pyramid_triangular_base">Pirámide (Base Triangular)</string>
+    <string name="pyramid_rectangular_base">Pirámide (Base Rectangular)</string>
+    <string name="pentagonal_prism">Prisma Pentagonal</string>
+    <string name="cone">Cono</string>
+    <string name="cylinder">Cilindro</string>
+    <string name="regular_octahedron">Octaedro Regular</string>
+    <string name="dodecahedron">Dodecaedro</string>
+    <string name="torus">Toro</string>
+    <string name="side_length">Largo del Lado</string>
+    <string name="length">Largo</string>
+    <string name="width">Ancho</string>
+    <string name="radius">Radio</string>
+    <string name="major_radius">Radio Mayor</string>
+    <string name="minor_radius">Radio Menor</string>
+    <string name="base_length">Largo del Base</string>
+    <string name="height">Altura</string>
+    <string name="lower_base">Base Inferior</string>
+    <string name="upper_base">Base Superior</string>
+    <string name="apothem">Apotema</string>
     <string name="base_length_2">Base</string>
-    <string name="base_area">Base Area</string>
-    <string name="pyramid_height">Pyramid Height</string>
-    <string name="prism_height">Prism Height</string>
-    <string name="base_width">Base Width</string>
-    <string name="base_perimeter">Base Perimeter</string>
-    <string name="slant_height">Slant Height</string>
-    <string name="edit">Edit</string>
-    <string name="shortcuts">Shortcuts</string>
-    <string name="delete">Delete</string>
-    <string name="distance_inches">Inches</string>
-    <string name="distance_feet">Feet</string>
-    <string name="distance_yards">Yards</string>
-    <string name="distance_miles">Miles</string>
-    <string name="distance_millimeters">Millimeters</string>
-    <string name="distance_centimeters">Centimeters</string>
-    <string name="distance_meters">Meters</string>
-    <string name="distance_kilometers">Kilometers</string>
-    <string name="open_terminal">Open Terminal</string>
+    <string name="base_area">Área del Base</string>
+    <string name="pyramid_height">Altura del Pirámide</string>
+    <string name="prism_height">Altura del Prisma</string>
+    <string name="base_width">Ancho del Base</string>
+    <string name="base_perimeter">Perímetro del Base</string>
+    <string name="slant_height">Altura del Inclinación</string>
+    <string name="edit">Editar</string>
+    <string name="shortcuts">Atajos</string>
+    <string name="delete">Borrar</string>
+    <string name="distance_inches">Pulgadas</string>
+    <string name="distance_feet">Pies</string>
+    <string name="distance_yards">Yardas</string>
+    <string name="distance_miles">Millas</string>
+    <string name="distance_millimeters">Milímetros</string>
+    <string name="distance_centimeters">Centímetros</string>
+    <string name="distance_meters">Metros</string>
+    <string name="distance_kilometers">Kilómetros</string>
+    <string name="open_terminal">Abrir la Terminal</string>
     <string name="mass_micrograms">Micrograms</string>
     <string name="mass_milligrams">Milligrams</string>
     <string name="mass_centigrams">Centigrams</string>
