--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -134,40 +134,40 @@
     <string name="distance_meters">Metros</string>
     <string name="distance_kilometers">Kilómetros</string>
     <string name="open_terminal">Abrir la Terminal</string>
-    <string name="mass_micrograms">Micrograms</string>
-    <string name="mass_milligrams">Milligrams</string>
-    <string name="mass_centigrams">Centigrams</string>
-    <string name="mass_grams">Grams</string>
-    <string name="mass_kilograms">Kilograms</string>
-    <string name="mass_ounces">Ounces</string>
-    <string name="mass_pounds">Pounds</string>
+    <string name="mass_micrograms">Microgramos</string>
+    <string name="mass_milligrams">Miligramos</string>
+    <string name="mass_centigrams">Centigramos</string>
+    <string name="mass_grams">Gramos</string>
+    <string name="mass_kilograms">Kilogramos</string>
+    <string name="mass_ounces">Onzas</string>
+    <string name="mass_pounds">Libras</string>
     <string name="mass_newtons">Newtons</string>
-    <string name="mass_stones">Stones</string>
-    <string name="temp_fahrenheit">Fahrenheit</string>
-    <string name="temp_celsius">Celsius</string>
+    <string name="mass_stones">Piedras</string>
+    <string name="temp_fahrenheit">Farenheit</string>
+    <string name="temp_celsius">Centígrado</string>
     <string name="temp_kelvin">Kelvin</string>
-    <string name="time_nanoseconds">Nanoseconds</string>
-    <string name="time_microseconds">Microseconds</string>
-    <string name="time_milliseconds">Milliseconds</string>
-    <string name="time_seconds">Seconds</string>
-    <string name="time_minutes">Minutes</string>
-    <string name="time_hours">Hours</string>
-    <string name="time_days">Days</string>
-    <string name="time_weeks">Weeks</string>
-    <string name="volume_milliliters">Milliliters</string>
-    <string name="volume_liters">Liters</string>
-    <string name="volume_cubic_meters">Cubic Meters</string>
-    <string name="volume_ounces">Ounces</string>
-    <string name="volume_cups">Cups</string>
-    <string name="volume_pints">Pints</string>
-    <string name="volume_quarts">Quarts</string>
-    <string name="volume_gallons">Gallons</string>
-    <string name="calculate">CALCULATE</string>
-    <string name="years">YEARS</string>
-    <string name="months">MONTHS</string>
-    <string name="days">DAYS</string>
-    <string name="from">From:</string>
-    <string name="to">To:</string>
+    <string name="time_nanoseconds">Nanosegundos</string>
+    <string name="time_microseconds">Microsegundos</string>
+    <string name="time_milliseconds">Milisegundos</string>
+    <string name="time_seconds">Segundos</string>
+    <string name="time_minutes">Minutos</string>
+    <string name="time_hours">Horas</string>
+    <string name="time_days">Días</string>
+    <string name="time_weeks">Semanas</string>
+    <string name="volume_milliliters">Mililitros</string>
+    <string name="volume_liters">Litros</string>
+    <string name="volume_cubic_meters">Metros Cúbicos</string>
+    <string name="volume_ounces">Onzas</string>
+    <string name="volume_cups">Tazas</string>
+    <string name="volume_pints">Pintas</string>
+    <string name="volume_quarts">Cuartos</string>
+    <string name="volume_gallons">Galones</string>
+    <string name="calculate">CALCULAR</string>
+    <string name="years">AÑOS</string>
+    <string name="months">MESES</string>
+    <string name="days">DÍAS</string>
+    <string name="from">Inicial:</string>
+    <string name="to">Final:</string>
     <string name="select_shortcut_key">Select the number key(s) to which you would like to assign</string>
     <string name="always_dark_nav">Always set the nav drawer to dark mode.</string>
     <string name="darken_status_bar">Darken the status bar slightly when using a custom dark theme.</string>
