--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -176,13 +176,13 @@
     <string name="max_decimals_description">Note: Some complex operations may take noticeably longer to complete if this value is greater than 10.</string>
     <string name="live_expression_description">Calculate and display expression results before pressing the equals button.</string>
     <string name="ignore_pemdas_description">Ignore PEMDAS and prioritize evaluating coefficients in front of parentheses.\n(WARNING: Only enable this if you know what you\'re doing! Enabling this can yield incorrect calculation results)</string>
-    <string name="dynamic_precision">Dynamic Precision</string>
-    <string name="max_decimal_places">Maximum Decimal Places</string>
-    <string name="focus_mode">Focus Mode</string>
+    <string name="dynamic_precision">Precisión Dinámica</string>
+    <string name="max_decimal_places">Número Máximo de Decimales</string>
+    <string name="focus_mode">Modo de Enfoque</string>
     <string name="show_constants_functions">Show Custom Constants/Functions</string>
-    <string name="live_expression_eval">Live Expression Evaluation</string>
-    <string name="exchange_rate_frequency_title">When to Fetch Exchange Rates</string>
-    <string name="prioritize_coefficients_title">Prioritize Coefficients</string>
+    <string name="live_expression_eval">Evaluación de Expresión En Vivo</string>
+    <string name="exchange_rate_frequency_title">Frecuencia de Obtención de Tipos de Cambio</string>
+    <string name="prioritize_coefficients_title">Priorizar Coeficientes</string>
     <string name="distance">Distancia</string>
     <string name="mass">Peso</string>
     <string name="time">Tiempo</string>
@@ -192,31 +192,31 @@
     <string name="base_representation">Base</string>
     <string name="date_toolbar_title">Cálculo de Fecha</string>
     <string name="volume_lower">Volumen</string>
-    <string name="select_color">Select Color</string>
-    <string name="background_color">Background Color</string>
-    <string name="text_color">Text Color</string>
-    <string name="set_color">Set Color</string>
-    <string name="cancel">Cancel</string>
-    <string name="invalid_hex_error">Error: Invalid hex code</string>
-    <string name="confirm">Confirm</string>
+    <string name="select_color">Escoger un Color</string>
+    <string name="background_color">Color de Fondo</string>
+    <string name="text_color">Color de Texto</string>
+    <string name="set_color">Aplicar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="invalid_hex_error">Error: El código hexadecimal no es válido</string>
+    <string name="confirm">Confirmar</string>
     <string name="delete_theme_confirmation">¿Estás seguro que quieres eliminar \"</string>
     <string name="successfully_deleted_theme">Eliminó con éxito \"</string>
     <string name="successfully_restored_theme">Aplicado con éxito \"</string>
     <string name="reset_color">Reajustar</string>
     <string name="to_default">\?</string>
-    <string name="copied_to_clipboard">copied to clipboard</string>
-    <string name="unsaved_changes">Unsaved Changes</string>
-    <string name="apply">Apply</string>
-    <string name="dont_apply">Don\'t Apply</string>
-    <string name="successfully_saved">Successfully saved</string>
+    <string name="copied_to_clipboard">copiado al portapapeles</string>
+    <string name="unsaved_changes">Cambios Sin Guardar</string>
+    <string name="apply">Aplicar</string>
+    <string name="dont_apply">Descartar los Cambios</string>
+    <string name="successfully_saved">Guardado Con Éxito</string>
     <string name="empty_theme_name_error">Error: Theme name cannot be empty</string>
-    <string name="rename_theme">Rename Theme</string>
+    <string name="rename_theme">Renombrar el Tema</string>
     <string name="overwrite_theme_confirmation">A theme with that name already exists. Do you want to overwrite it?</string>
-    <string name="successfully_renamed">Successfully renamed</string>
+    <string name="successfully_renamed">Renombrado con éxito</string>
     <string name="import_file_not_found_error">Error: Either the specified file could not be found, or access was denied.</string>
 
     <!-- "custom" cannot be longer than 7 characters due to layout size constraints. -->
     <string name="custom">Escoger</string>
     <string name="currency_fetch_error">Error retrieving currency data</string>
-    <string name="error_no_internet">Error: No Internet Connection</string>
+    <string name="error_no_internet">Error: No hay conexión a Internet</string>
 </resources>
