--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -532,4 +532,5 @@
     <string name="import_file_not_found_error">Error: Either the specified file could not be found, or access was denied.</string>
     <string name="currency_fetch_error">Error retrieving currency data</string>
     <string name="error_no_internet">Error: No Internet Connection</string>
+    <string name="no_colors_in_clipboard">No colors found in clipboard</string>
 </resources>
