--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -203,7 +203,7 @@
     <string name="time">Time</string>
     <string name="currency">Currency</string>
     <string name="speed">Speed</string>
-    <string name="temperature_abbreviated">Temp.</string>
+    <string name="temperature_abbreviated">Temperature</string>
     <string name="date_toolbar_title">Date</string>
     <string name="base_representation">Base</string>
     <string name="volume_lower">Volume</string>
